--- a/.travis.yml
+++ b/.travis.yml
@@ -20,14 +20,18 @@ branches:
     - /^[0-9]+\.[0-9]+\.[0-9]+/
 
 install:
-  - pip install pipenv
-  - pipenv install --dev --skip-lock
+  - pip install -r requirements.txt
+  - pip install pytest
+  - pip install pytest-cov
+  - pip install codecov
+  - pip install twine
+  - pip install wheel
 
 script:
-  pipenv run pytest --cov=scake --cov-report=xml -v
+  - pytest --cov=scake --cov-report=xml -v
 
 after_success:
-  pipenv run codecov
+  - codecov
 
 deploy:
   provider: pypi
