--- a/setup.cfg
+++ b/setup.cfg
@@ -29,7 +29,7 @@ packages=
     scake
 python_requires=>=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, <4,
 install_requires=
-    PyYAML>=5.1
+    PyYAML
 
 #[options.entry_points]
 #console_scripts=
