--- a/.travis.yml
+++ b/.travis.yml
@@ -21,11 +21,7 @@ branches:
 
 install:
   - pip install -r requirements.txt
-  - pip install pytest
-  - pip install pytest-cov
-  - pip install codecov
-  - pip install twine
-  - pip install wheel
+  - pip install pytest pytest-cov codecov twine wheel
 
 script:
   - pytest --cov=scake --cov-report=xml -v
