--- a/setup.cfg
+++ b/setup.cfg
@@ -31,9 +31,9 @@ python_requires=>=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, <4,
 install_requires=
     PyYAML
 
-#[options.entry_points]
-#console_scripts=
-#    scake=scake.cli:main
+[options.entry_points]
+console_scripts=
+    scake=scake.cli:main
 
 [bdist_wheel]
 universal=1
