--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ branches:
 
 install:
   - pip install -r requirements.txt
-  - pip install pytest pytest-cov codecov twine wheel
+  - pip install pytest==5.4.3 pytest-cov==2.10.1 codecov==2.1.10 twine wheel
 
 script:
   - pytest --cov=scake --cov-report=xml -v
