--- a/setup.cfg
+++ b/setup.cfg
@@ -16,20 +16,22 @@ classifiers=
     License :: OSI Approved :: MIT License
     Topic :: Software Development :: Libraries :: Python Modules
     Intended Audience :: Developers
-    Programming Language :: Python :: 2
-    Programming Language :: Python :: 2.7
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.5
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
     Programming Language :: Python :: Implementation
 
 [options]
 packages=
     scake
-python_requires=>=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, <4,
+python_requires=>=3.5, <4,
 install_requires=
-    PyYAML
+    omegaconf==2.3.0
+    ray==2.5.1
 
 #[options.entry_points]
 #console_scripts=
