--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,10 +1,16 @@
 repos:
 -   repo: https://github.com/pre-commit/mirrors-autopep8
-    sha: v1.4.4  # Use the sha / tag you want to point at
+    # sha: v1.4.4  # Use the sha / tag you want to point at
+    rev: 'v2.0.2'
     hooks:
     -   id: autopep8
+-   repo: https://github.com/ambv/black
+    rev: 23.7.0
+    hooks:
+    -   id: black
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    sha: v1.2.3
+    # sha: v1.2.3
+    rev: 'v4.4.0'
     hooks:
     -   id: check-merge-conflict
     -   id: debug-statements
@@ -12,7 +18,6 @@ repos:
     -   id: end-of-file-fixer
     -   id: fix-encoding-pragma
     -   id: trailing-whitespace
-    -   id: flake8
 -   repo: local
     hooks:
     -   id: tests
