compatible pip package, add precommit addons

--- a/setup.cfg
+++ b/setup.cfg
@@ -26,8 +26,7 @@ classifiers=
     Programming Language :: Python :: Implementation
 
 [options]
-packages=
-    scake
+packages = find:
 python_requires=>=3.5, <4,
 install_requires=
     omegaconf==2.3.0
