--- a/setup.cfg
+++ b/setup.cfg
@@ -31,6 +31,7 @@ python_requires=>=3.5, <4,
 install_requires=
     omegaconf==2.3.0
     ray==2.5.1
+    plazy==0.1.6
 
 #[options.entry_points]
 #console_scripts=
