update scake dependencies

--- a/setup.cfg
+++ b/setup.cfg
@@ -29,9 +29,9 @@ classifiers=
 packages = find:
 python_requires=>=3.5, <4,
 install_requires=
-    omegaconf==2.3.0
-    ray==2.5.1
-    plazy==0.1.6
+    plazy>=0.1.6
+    omegaconf
+    ray    
 
 #[options.entry_points]
 #console_scripts=
